--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -83,7 +83,7 @@ I like your figures, but maybe consider homogenizing a little bit the styles for
 
 L205-206 Maybe add some references. How many degrees? In your Figure 3 there is not really a difference between Tleaf and Tair when SWR = 0. Given that the transpiration nearly stops at night (high humidity, low conductance) I would expect Tleaf – Tair to be very close to zero.
 
-**We revised and added references to this sentence in question, which now reads: **
+**We moved Biophysical Drivers of $T_{leaf}$ section (previously section 2) to supplementary material notes as we had to cut words to meet the required word limit. Although, we revised and added references to this sentence in question, which now reads: **
 **Leaves are often cooler than the air on clear nights due to radiative coupling with the very cold sky, and under some daytime conditions [cloudy skies, high wind speeds, and high $T_{air}$, @vogelLeavesLowestHighest2009; @rey-sanchez_spatial_2016;  @cavaleriColdbloodedForestsWarming2020].**
 
 **Figure 3 shows the effect of each variable while the others are held constant (as specified in the caption). Thus, it does not represent the full suite of night-time conditions.** 
